# multiplayer_bomber_rust

./: .gitignore  Cargo.toml  LICENSE.md  README.md  export_presets.cfg  project.godot
res/: tileset.tres
res/graphics/: brickfloor.png.import  charwalk.png.import  explosion.png.import  rock_bit.png.import
scenes/Bomb/: Bomb.gdns  Bomb.tscn
scenes/Lobby/: Lobby.gdns  Lobby.tscn
scenes/Player/: Player.gdns  Player.tscn
scenes/Rock/: Rock.gdns  Rock.tscn
scenes/TileScene/: tile_scene.tscn
scenes/World/: Score.gdns  World.tscn
src/: bomb.rs  gamestate.gdns  gamestate.rs  gdnativelibrary.tres  lib.rs  lobby.rs  player.rs  rock.rs  score.rs  utils.rs
