[package]
name = "multiplayer_bomber_rust"
version = "0.1.1"
authors = [ "alzhann07@gmail.com" ]
edition = "2018"
readme = "README.md"
repository = "https://github.com/alphazhan/multiplayer_bomber_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9.3"
rand = "0.8.0"

[lib]
crate-type = ["cdylib"]
